--- a/Daad_Vercel/index.html
+++ b/Daad_Vercel/index.html
@@ -265,7 +265,7 @@
         // هذا الحل سيعمل مباشرة من المتصفح ويتجاوز السيرفر تماماً
         async function callAssistant(payload) {
             try {
-                const API_KEY = "YOUR_API_KEY_HERE"; // ⚠️⚠️ ضع مفتاحك هنا مباشرة ليعمل من المتصفح
+                const API_KEY = AIzaSyAZcDET8R3752vyMO3EfPfKShyvYEt2_j4"; // ⚠️⚠️ ضع مفتاحك هنا مباشرة ليعمل من المتصفح
                 
                 if(!API_KEY || API_KEY === "YOUR_API_KEY_HERE") {
                     return "⚠️ خطأ: يرجى وضع مفتاح API في الكود (السطر 280).";
@@ -356,4 +356,5 @@ AIzaSyAZcDET8R3752vyMO3EfPfKShyvYEt2_j4
     </script>
 </body>
 </html>
+
 
