--- a/Daad_Vercel/index.html
+++ b/Daad_Vercel/index.html
@@ -22,7 +22,6 @@
             }
         }
     </script>
-
     <style>
         :root { font-family: 'Cairo', sans-serif; }
         body { background-color: #501323; background-image: radial-gradient(circle at center, #501323 0%, #3E0F1C 100%); min-height: 100vh; background-attachment: fixed; }
@@ -146,9 +145,9 @@
 
     <script>
         // =================================================================
-        // ⚠️ هام جداً: ضع مفتاح API الخاص بك هنا مباشرة بين علامات التنصيص
+        // ⚠️ ضع مفتاح API هنا مباشرة (بين علامات التنصيص)
         // =================================================================
-        const API_KEY = "AIzaSyAZcDET8R3752vyMO3EfPfKShyvYEt2_j4"; 
+        const API_KEY = "AIzaSyACQQJiuXochh37NgmglgflxsLPU3R92Pk"; 
         
         const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbytnMAGBbWM_eSxUQxIqU6F7xUoxAH1P5olmGMER3YacoJRCmzX5L5_Wy4rVCLfVgsw/exec"; 
 
@@ -257,11 +256,11 @@
             }
         }
 
-        // *** دالة الاتصال المباشر (Client-Side) ***
+        // *** الاتصال المباشر (Client-Side Fetch) ***
         async function callAssistant(payload) {
             try {
-                if (!API_KEY || API_KEY === "ضع_مفتاحك_هنا") {
-                    return "⚠️ خطأ: لم تقم بوضع مفتاح API في كود الموقع. يرجى تعديل الملف وإضافة المفتاح.";
+                if (!API_KEY || API_KEY.includes("ضع_مفتاحك")) {
+                    return "⚠️ خطأ: يرجى وضع مفتاح API في كود index.html (السطر 280) ثم إعادة الرفع.";
                 }
 
                 const systemPrompt = `
@@ -274,15 +273,16 @@
                 let contents = [{ role: "user", parts: [{ text: systemPrompt }] }];
                 if (payload.history.length > 0) contents = contents.concat(payload.history.slice(-4));
 
-                // استخدام gemini-pro مباشرة من المتصفح
-                const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent?key=${API_KEY}`, {
+                // استخدام gemini-1.5-flash الأحدث والأسرع
+                const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${API_KEY}`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ contents: contents })
                 });
 
                 const data = await response.json();
-                if(data.error) return `⚠️ خطأ جوجل: ${data.error.message}`;
+                
+                if (data.error) return `⚠️ خطأ جوجل: ${data.error.message}`;
                 return data.candidates?.[0]?.content?.parts?.[0]?.text || "وصل رد فارغ.";
 
             } catch(e) {
