--- a/Daad_Vercel/index.html
+++ b/Daad_Vercel/index.html
@@ -149,7 +149,7 @@
         // =================================================================
         // ⚠️ الخطوة الأخيرة والأهم: ضع مفتاح API هنا مباشرة ⚠️
         // =================================================================
-        const API_KEY = "YOUR_API_KEY_HERE"; // 👈 امسح الكلمة دي وحط مفتاحك هنا بين علامات التنصيص
+        const API_KEY = "AIzaSyACQQJiuXochh37NgmglgflxsLPU3R92Pk"; // 👈 امسح الكلمة دي وحط مفتاحك هنا بين علامات التنصيص
         
         const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbytnMAGBbWM_eSxUQxIqU6F7xUoxAH1P5olmGMER3YacoJRCmzX5L5_Wy4rVCLfVgsw/exec"; 
         const PROPOSAL_STORAGE_KEY = 'daad_proposal';
